--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*
+File: style.css
+GUI Assignment: Scrabble Game
+Raj Vekeria, UMass Lowell Computer Science, rvekeria@cs.uml.edu
+Copyright (c) 2021 by Raj. All rights reserved. May be freely copied or
+excerpted for educational purposes with credit to the author.
+updated by RV on December 15, 2021 at 2:52 PM
+*/
 body, html {
     background-color: lightgray;
     min-height: 500px;
